[Content guides] Fix alignment of icons

--- a/app/assets/stylesheets/pages/_content-guide.scss
+++ b/app/assets/stylesheets/pages/_content-guide.scss
@@ -179,6 +179,7 @@
 
 .c-cg-icon {
   background-size: contain;
+  clear: left;
   float: left;
   height: 80px;
   margin: 0 1rem 1rem 0;
